# qt-sudoku

./: CMakeLists.txt
include/: PlainTextEditIODevice.h  dyn_assert.h  mainwindow.h  sudoku_class.h  sudoku_print.h  sudoku_read.h  sudoku_solve.h  sudoku_solve_helper.h  w_sudoku.h  w_sudoku_view.h
input/: sudoku.in  sudoku.in.4x4  sudoku.in.6x6_2x3  sudoku.in.einsteiger  sudoku.in.flims  sudoku.in.flims2  sudoku.in.flims2_block-line-interaction  sudoku.in.hidden-single  sudoku.in.hidden_triple1  sudoku.in.hidden_triple2  sudoku.in.hidden_triple3  sudoku.in.mittel  sudoku.in.naked-quadruple1  sudoku.in.naked-quadruple2  sudoku.in.null  sudoku.in.recurse  sudoku.in.recurse.solved  sudoku.in.recurse.solved_1st-block-missing  sudoku.in.recurse.solved_1st-cell-missing  sudoku.in.recurse.solved_1st-row-missing  sudoku.in.std
source/: dyn_assert.cpp  main.cpp  mainwindow.cpp  sudoku_class.cpp  sudoku_solve.cpp  sudoku_solve_helper.cpp  w_sudoku.cpp  w_sudoku_view.cpp
src/: dyn_assert.cpp  sudoku_print.cpp  sudoku_solve_helper.cpp  w_sudoku.cpp
